# tinyraytracer

./: .gitignore  CMakeLists.txt  README.md
include/: aabb.hpp  bvh.hpp  camera.hpp  kdtree.hpp  material.hpp  model.hpp  primitive.hpp  ray.hpp  renderer.hpp  scene.hpp  texture.hpp  utils.hpp  vec.hpp  volume.hpp
output/: out.ppm  rt.ppm  rt2.ppm
src/: bvh.cpp  kdtree.cpp  main.cpp  model.cpp  renderer.cpp  scene.cpp  utils.cpp
